iniファイルの記述に間違いが大量にあり、まったく動作しなかった問題を修正

--- a/doc/BonDriver_PX_x3U4_T.ini
+++ b/doc/BonDriver_PX_x3U4_T.ini
@@ -3,14 +3,14 @@
 DebugLog=0
 
 [Tuner]
-FriendlyName0="PXW3U4 Multi Tuner ISDB-S BDA Filter #0"
-FriendlyName1="PXW3U4 Multi Tuner ISDB-S BDA Filter #1"
-FriendlyName2="PXQ3U4 Multi Tuner ISDB-S BDA Filter #0"
-FriendlyName3="PXQ3U4 Multi Tuner ISDB-S BDA Filter #1"
-FriendlyName4="PXQ3U4 Multi Tuner ISDB-S BDA Filter #2"
-FriendlyName5="PXQ3U4 Multi Tuner ISDB-S BDA Filter #3"
+FriendlyName0="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
+FriendlyName1="PXW3U4 Multi Tuner ISDB-T BDA Filter #1"
+FriendlyName2="PXQ3U4 Multi Tuner ISDB-T BDA Filter #0"
+FriendlyName3="PXQ3U4 Multi Tuner ISDB-T BDA Filter #1"
+FriendlyName4="PXQ3U4 Multi Tuner ISDB-T BDA Filter #2"
+FriendlyName5="PXQ3U4 Multi Tuner ISDB-T BDA Filter #3"
 Name="PX-x3U4"
-UseSpecial="IT25"
+UseSpecial="IT35"
 DVBSystemType=2
 DefaultNetwork=3
 NotExistCaptureDevice=1
