--- a/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj.filters
+++ b/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj.filters
@@ -45,4 +45,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Exports.def">
+      <Filter>ソース ファイル</Filter>
+    </None>
+  </ItemGroup>
 </Project>
