--- a/doc/x3U4Remocon/x3U4Remocon.ini
+++ b/doc/x3U4Remocon/x3U4Remocon.ini
@@ -5,7 +5,7 @@
 ; デバッグログを記録するかどうか(1で有効)
 DebugLog=0
 ;
-; カードリーダーとして使用するチューナーのFriendlyName（PX-W3U4の場合）
+; リモコン受信機として使用するチューナーのFriendlyName（PX-W3U4の場合）
 TunerFriendlyName="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
 ; PX-Q3U4の場合は上記の行を消して下記の行の先頭の";"を取り除く
 ;TunerFriendlyName="PXQ3U4 Multi Tuner ISDB-T BDA Filter #0"
