各iniファイルにPX-W3PE4/PX-Q3PE4に関する情報を追加

--- a/doc/BonDriver_PX_x3U4_S.ini
+++ b/doc/BonDriver_PX_x3U4_S.ini
@@ -13,6 +13,12 @@ FriendlyName2="PXQ3U4 Multi Tuner ISDB-S BDA Filter #0"
 FriendlyName3="PXQ3U4 Multi Tuner ISDB-S BDA Filter #1"
 FriendlyName4="PXQ3U4 Multi Tuner ISDB-S BDA Filter #2"
 FriendlyName5="PXQ3U4 Multi Tuner ISDB-S BDA Filter #3"
+FriendlyName6="PXW3PE4 Multi Tuner ISDB-S BDA Filter #0"
+FriendlyName7="PXW3PE4 Multi Tuner ISDB-S BDA Filter #1"
+FriendlyName8="PXQ3PE4 Multi Tuner ISDB-S BDA Filter #0"
+FriendlyName9="PXQ3PE4 Multi Tuner ISDB-S BDA Filter #1"
+FriendlyName10="PXQ3PE4 Multi Tuner ISDB-S BDA Filter #2"
+FriendlyName11="PXQ3PE4 Multi Tuner ISDB-S BDA Filter #3"
 Name="PX-x3U4"
 UseSpecial="IT35"
 DVBSystemType=2
