--- a/doc/WinSCard-x3U4/WinSCard.ini
+++ b/doc/WinSCard-x3U4/WinSCard.ini
@@ -9,8 +9,10 @@ DetailLog=0
 ;
 ; カードリーダーとして使用するチューナーのFriendlyName（PX-W3U4の場合）
 TunerFriendlyName="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
-; PX-Q3U4の場合は上記の行を消して下記の行の先頭の";"を取り除く
+; PX-Q3U4/PX-W3PE4/PX-Q3PE4の場合は上記の行を消して下記該当行の先頭の";"を取り除く
 ;TunerFriendlyName="PXQ3U4 Multi Tuner ISDB-T BDA Filter #0"
+;TunerFriendlyName="PXW3PE4 Multi Tuner ISDB-T BDA Filter #0"
+;TunerFriendlyName="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #0"
 ;
 ; ガードインターバル時間(msec)
 GuardInterval=50
