--- a/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj
+++ b/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj
@@ -232,11 +232,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\common\CIniFileAccess.cpp" />
+    <ClCompile Include="..\..\..\common\common.cpp" />
     <ClCompile Include="..\..\..\common\DSFilterEnum.cpp" />
     <ClCompile Include="CCOMProc-x3U4Remocon.cpp" />
     <ClCompile Include="x3U4Remocon.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\common\CIniFileAccess.h" />
     <ClInclude Include="..\..\..\common\common.h" />
     <ClInclude Include="..\..\..\common\DSFilterEnum.h" />
     <ClInclude Include="..\..\..\common\WaitWithMsg.h" />
