--- a/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj.filters
+++ b/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="CCOMProc-x3U4Remocon.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\common\CIniFileAccess.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\common\common.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TVTestPlugin.h">
@@ -42,6 +48,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="CCOMProc-x3U4Remocon.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\common\CIniFileAccess.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
