・WinSCard.iniとx3U4Remocon.iniで、デバイスインスタンスを指定できるようにした

--- a/doc/WinSCard-x3U4/WinSCard.ini
+++ b/doc/WinSCard-x3U4/WinSCard.ini
@@ -14,6 +14,9 @@ TunerFriendlyName="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="PXW3PE4 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #0"
 ;
+; デバイスインスタンスパスの指定（同一のチューナーが複数台ある場合用）
+;TunerInstancePath="USB\VID_0511&PID_083F\000001650000551"
+;
 ; ガードインターバル時間(msec)
 GuardInterval=50
 ;
