--- a/doc/x3U4Remocon/x3U4Remocon.ini
+++ b/doc/x3U4Remocon/x3U4Remocon.ini
@@ -10,5 +10,8 @@ TunerFriendlyName="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
 ; PX-Q3U4の場合は上記の行を消して下記の行の先頭の";"を取り除く
 ;TunerFriendlyName="PXQ3U4 Multi Tuner ISDB-T BDA Filter #0"
 ;
+; デバイスインスタンスパスの指定（同一のチューナーが複数台ある場合用）
+;TunerInstancePath="USB\VID_0511&PID_083F\000001650000551"
+;
 ; リモコンの状態をポーリングするインターバル時間(msec)
 PollingInterval=100
