プロジェクトファイル修正
・プロジェクト「x3U4Remocon」に「x3U4Remocon.ini」ファイルを追加
・プロジェクト「WinSCard-x3U4」の「WinSCard.ini」ファイルのパス修正

--- a/BdaSpecials/IT35/WinSCard-x3U4/WinSCard-x3U4.vcxproj.filters
+++ b/BdaSpecials/IT35/WinSCard-x3U4/WinSCard-x3U4.vcxproj.filters
@@ -70,7 +70,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\doc\WinSCard-x3U4.ini">
+    <None Include="..\..\..\doc\WinSCard-x3U4\WinSCard.ini">
       <Filter>doc</Filter>
     </None>
   </ItemGroup>
