--- a/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj
+++ b/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj
@@ -248,6 +248,7 @@
     <ClInclude Include="TVTestPlugin.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\..\doc\x3U4Remocon\x3U4Remocon.ini" />
     <None Include="Exports.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
