--- a/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj.filters
+++ b/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="doc">
+      <UniqueIdentifier>{e31d8743-71e4-473c-b531-5f0182615a5b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="x3U4Remocon.cpp">
@@ -57,6 +60,9 @@
   <ItemGroup>
     <None Include="Exports.def">
       <Filter>ソース ファイル</Filter>
+    </None>
+    <None Include="..\..\..\doc\x3U4Remocon\x3U4Remocon.ini">
+      <Filter>doc</Filter>
     </None>
   </ItemGroup>
 </Project>
