--- a/BdaSpecials/IT35/WinSCard-x3U4/WinSCard-x3U4.vcxproj
+++ b/BdaSpecials/IT35/WinSCard-x3U4/WinSCard-x3U4.vcxproj
@@ -260,7 +260,7 @@
     <ClCompile Include="WinSCard-x3U4.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\doc\WinSCard-x3U4.ini" />
+    <None Include="..\..\..\doc\WinSCard-x3U4\WinSCard.ini" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
