INIファイルの記述方法を変更

--- a/doc/BonDriver_PX_x3U4_S.ini
+++ b/doc/BonDriver_PX_x3U4_S.ini
@@ -1,10 +1,10 @@
 ; PX-W3U4/Q3U4用の衛星放送iniファイル
 [IT35]
-DebugLog=0
-RewriteIFFreq=1
-PrivateSetTSID=1
-; LNB電源の供給を行う場合は下記を LNBPowerON=1に書き換える
-LNBPowerON=0
+DebugLog=NO
+RewriteIFFreq=YES
+PrivateSetTSID=YES
+; LNB電源の供給を行う場合は下記を LNBPowerON=YESに書き換える
+LNBPowerON=NO
 
 [Tuner]
 FriendlyName0="PXW3U4 Multi Tuner ISDB-S BDA Filter #0"
@@ -21,22 +21,22 @@ FriendlyName10="PXQ3PE4 Multi Tuner ISDB-S BDA Filter #2"
 FriendlyName11="PXQ3PE4 Multi Tuner ISDB-S BDA Filter #3"
 Name="PX-x3U4"
 UseSpecial="IT35"
-DVBSystemType=2
-DefaultNetwork=2
-NotExistCaptureDevice=1
-SignalLevelCalcType=13
+DVBSystemType="DVB-T"
+DefaultNetwork="BS/CS110"
+NotExistCaptureDevice=YES
+SignalLevelCalcType="TunerAdd"
 StrengthCoefficient=655.36
 QualityCoefficient=100
 
 [BonDriver]
-DebugLog=0
+DebugLog=NO
 BuffSize=0
 MaxBuffCount=512
 WaitTsCount=1
 WaitTsSleep=100
 
 [Channel]
-ReserveUnusedCh=1
+ReserveUnusedCh=YES
 
 [TuningSpace00]
 TuningSpaceName="BS"
