--- a/doc/WinSCard-x3U4/WinSCard.ini
+++ b/doc/WinSCard-x3U4/WinSCard.ini
@@ -1,11 +1,11 @@
 ; WinSCard-x3U4用のiniファイル
 [SCard]
 ;
-; デバッグログを記録するかどうか(1で有効)
-DebugLog=0
+; デバッグログを記録するかどうか(YESで有効)
+DebugLog=NO
 ;
-; デバッグログに送受信した内容も記録するかどうか(1で有効)
-DetailLog=0
+; デバッグログに送受信した内容も記録するかどうか(YESで有効)
+DetailLog=NO
 ;
 ; カードリーダーとして使用するチューナーのFriendlyName（PX-W3U4の場合）
 TunerFriendlyName="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
