--- a/doc/x3U4Remocon/x3U4Remocon.ini
+++ b/doc/x3U4Remocon/x3U4Remocon.ini
@@ -2,8 +2,8 @@
 ; x3U4Remocon.tvtpと同じフォルダに配置してください
 [Generic]
 ;
-; デバッグログを記録するかどうか(1で有効)
-DebugLog=0
+; デバッグログを記録するかどうか(YESで有効)
+DebugLog=NO
 ;
 ; リモコン受信機として使用するチューナーのFriendlyName（PX-W3U4の場合）
 TunerFriendlyName="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
