--- a/doc/BonDriver_PX_x3U4_T.ini
+++ b/doc/BonDriver_PX_x3U4_T.ini
@@ -1,6 +1,6 @@
 ; PX-W3U4/Q3U4用の地デジ放送iniファイル
 [IT35]
-DebugLog=0
+DebugLog=NO
 
 [Tuner]
 FriendlyName0="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
@@ -17,22 +17,22 @@ FriendlyName10="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #2"
 FriendlyName11="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #3"
 Name="PX-x3U4"
 UseSpecial="IT35"
-DVBSystemType=2
-DefaultNetwork=3
-NotExistCaptureDevice=1
-SignalLevelCalcType=13
+DVBSystemType="DVB-T"
+DefaultNetwork="UHF/CATV"
+NotExistCaptureDevice=YES
+SignalLevelCalcType="TunerAdd"
 StrengthCoefficient=655.36
 QualityCoefficient=100
 
 [BonDriver]
-DebugLog=0
+DebugLog=NO
 BuffSize=0
 MaxBuffCount=512
 WaitTsCount=1
 WaitTsSleep=100
 
 [Channel]
-ReserveUnusedCh=0
+ReserveUnusedCh=NO
 
 [TuningSpace00]
 TuningSpaceName="UHF"
