--- a/doc/BonDriver_1T1S.ini
+++ b/doc/BonDriver_1T1S.ini
@@ -12,7 +12,7 @@ FriendlyName0="ISDB2056 Dual Mode ISDB BDA Filter"
 Name="DTV02-1T1S-U"
 UseSpecial="IT35"
 DVBSystemType="DVB-T"
-DefaultNetwork="BS/CS110"
+DefaultNetwork="Dual"
 NotExistCaptureDevice=YES
 SignalLevelCalcType="TunerAdd"
 StrengthCoefficient=655.36
@@ -24,21 +24,6 @@ BuffSize=0
 MaxBuffCount=512
 WaitTsCount=1
 WaitTsSleep=100
-
-[Satellite]
-Satellite1Name=BS/CS110
-Satellite1LOscillator=10678000
-Satellite1ROscillator=10678000
-Satellite1ToneSignal=OFF
-
-[Modulation]
-ModulationType1Name=ISDB-S
-ModulationType1Modulation="BDA_MOD_ISDB_S_TMCC"
-ModulationType1InnerFEC="BDA_FEC_VITERBI"
-ModulationType1InnerFECRate="BDA_BCC_RATE_2_3"
-ModulationType1OuterFEC="BDA_FEC_VITERBI"
-ModulationType1OuterFECRate="BDA_BCC_RATE_NOT_SET"
-ModulationType1SymbolRate=28860
 
 [Channel]
 ReserveUnusedCh=YES
