最近のBDA DriverではSignalLevelの値が100超に張り付いてしまう問題を修正

--- a/doc/BonDriver_1T1S.ini
+++ b/doc/BonDriver_1T1S.ini
@@ -4,7 +4,7 @@ DebugLog=NO
 RewriteIFFreq=YES
 PrivateSetTSID=YES
 DualModeISDB=YES
-; LNB電源の供給を行う場合は下記を LNBPowerON=YESに書き換える
+; USBバスパワー給電なのでLNB電源の供給は無理?
 LNBPowerON=NO
 
 [Tuner]
@@ -15,7 +15,6 @@ DVBSystemType="DVB-T"
 DefaultNetwork="Dual"
 NotExistCaptureDevice=YES
 SignalLevelCalcType="TunerAdd"
-StrengthCoefficient=655.36
 QualityCoefficient=100
 
 [BonDriver]
