--- a/doc/BonDriver_PX_x3U4_T.ini
+++ b/doc/BonDriver_PX_x3U4_T.ini
@@ -1,4 +1,4 @@
-; PX-W3U4/Q3U4用の地デジ放送iniファイル
+; PX-W3U4/Q3U4/W3PE4/Q3PE4用の地デジ放送iniファイル
 [IT35]
 DebugLog=NO
 
@@ -21,7 +21,8 @@ DVBSystemType="DVB-T"
 DefaultNetwork="UHF/CATV"
 NotExistCaptureDevice=YES
 SignalLevelCalcType="TunerAdd"
-StrengthCoefficient=655.36
+; 極端に大きい数値になる場合(古いバージョンのBDA Driverで発生)は下記コメントを外してください
+;StrengthCoefficient=655.36
 QualityCoefficient=100
 
 [BonDriver]
