--- a/doc/BonDriver_PX_x3U4_S.ini
+++ b/doc/BonDriver_PX_x3U4_S.ini
@@ -1,4 +1,4 @@
-; PX-W3U4/Q3U4用の衛星放送iniファイル
+; PX-W3U4/Q3U4/W3PE4/Q3PE4用の衛星放送iniファイル
 [IT35]
 DebugLog=NO
 RewriteIFFreq=YES
@@ -25,7 +25,8 @@ DVBSystemType="DVB-T"
 DefaultNetwork="BS/CS110"
 NotExistCaptureDevice=YES
 SignalLevelCalcType="TunerAdd"
-StrengthCoefficient=655.36
+; 極端に大きい数値になる場合(古いバージョンのBDA Driverで発生)は下記コメントを外してください
+;StrengthCoefficient=655.36
 QualityCoefficient=100
 
 [BonDriver]
