DTV02-5T-P用のiniファイルを追加

--- a/BdaSpecials/IT35/IT35.vcxproj.filters
+++ b/BdaSpecials/IT35/IT35.vcxproj.filters
@@ -61,6 +61,9 @@
     <None Include="..\..\doc\BonDriver_1T1S.ini">
       <Filter>doc</Filter>
     </None>
+    <None Include="..\..\doc\BonDriver_5T.ini">
+      <Filter>doc</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\doc\History-IT35.txt">
