--- a/BdaSpecials/IT35/IT35.vcxproj
+++ b/BdaSpecials/IT35/IT35.vcxproj
@@ -249,6 +249,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\doc\BonDriver_1T1S.ini" />
+    <None Include="..\..\doc\BonDriver_5T.ini" />
     <None Include="..\..\doc\BonDriver_PX_x3U4_S.ini" />
     <None Include="..\..\doc\BonDriver_PX_x3U4_T.ini" />
   </ItemGroup>
