--- a/doc/WinSCard-x3U4/WinSCard.ini
+++ b/doc/WinSCard-x3U4/WinSCard.ini
@@ -1,4 +1,4 @@
-; WinSCard-x3U4用のiniファイル
+; Plex PX-Q3PE4/Plex PX-W3PE4/Plex PX-Q3U4/Plex PX-W3U4/e-Better DTV02-5T-P/e-Better DTV02-1T1S-U内臓カードリーダーのWinSCard.dll用のiniファイル
 [SCard]
 ;
 ; デバッグログを記録するかどうか(YESで有効)
@@ -9,10 +9,12 @@ DetailLog=NO
 ;
 ; カードリーダーとして使用するチューナーのFriendlyName（PX-W3U4の場合）
 TunerFriendlyName="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
-; PX-Q3U4/PX-W3PE4/PX-Q3PE4の場合は上記の行を消して下記該当行の先頭の";"を取り除く
+; PX-Q3U4/PX-W3PE4/PX-Q3PE4/DTV02-5T-P/DTV02-1T1S-Uの場合は上記の行を消して下記該当行の先頭の";"を取り除く
 ;TunerFriendlyName="PXQ3U4 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="PXW3PE4 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #0"
+;TunerFriendlyName="ISDBT6013 Multi Tuner ISDB-T BDA Filter #0"
+;TunerFriendlyName="ISDB2056 Dual Mode ISDB BDA Filter"
 ;
 ; デバイスインスタンスパスの指定（同一のチューナーが複数台ある場合用）
 ;TunerInstancePath="USB\VID_0511&PID_083F\000001650000551"
