--- a/doc/BonDriver_PX_x3U4_S.ini
+++ b/doc/BonDriver_PX_x3U4_S.ini
@@ -35,6 +35,8 @@ BuffSize=0
 MaxBuffCount=512
 WaitTsCount=1
 WaitTsSleep=100
+; 録画用として使用する場合でCPU高負荷時等バッファーオーバーランによるDropが発生する場合は下記を調整すると効果があるかもしれません。
+;ThreadPriorityStream="THREAD_PRIORITY_HIGHEST"
 
 [Channel]
 ReserveUnusedCh=YES
