Debugビルドの構成を「マルチスレッドデバッグDLL」から「マルチスレッドデバッグ」に変更

--- a/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj
+++ b/BdaSpecials/IT35/TVTestRemocon/x3U4Remocon.vcxproj
@@ -260,6 +260,7 @@
       <StringPooling>true</StringPooling>
       <MinimalRebuild>false</MinimalRebuild>
       <FunctionLevelLinking>true</FunctionLevelLinking>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -276,6 +277,7 @@
       <StringPooling>true</StringPooling>
       <MinimalRebuild>false</MinimalRebuild>
       <FunctionLevelLinking>true</FunctionLevelLinking>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
