BonDriver_PX_MLT5PE.ini を プロジェクトに追加

--- a/BdaSpecials/IT35/IT35.vcxproj
+++ b/BdaSpecials/IT35/IT35.vcxproj
@@ -469,6 +469,7 @@
   <ItemGroup>
     <None Include="..\..\doc\BonDriver_1T1S.ini" />
     <None Include="..\..\doc\BonDriver_5T.ini" />
+    <None Include="..\..\doc\BonDriver_PX_MLT5PE.ini" />
     <None Include="..\..\doc\BonDriver_PX_x3U4_S.ini" />
     <None Include="..\..\doc\BonDriver_PX_x3U4_T.ini" />
   </ItemGroup>
