--- a/BdaSpecials/IT35/IT35.vcxproj.filters
+++ b/BdaSpecials/IT35/IT35.vcxproj.filters
@@ -64,6 +64,9 @@
     <None Include="..\..\doc\BonDriver_5T.ini">
       <Filter>doc</Filter>
     </None>
+    <None Include="..\..\doc\BonDriver_PX_MLT5PE.ini">
+      <Filter>doc</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\doc\History-IT35.txt">
