--- a/BdaSpecials/IT35/IT35.vcxproj
+++ b/BdaSpecials/IT35/IT35.vcxproj
@@ -455,11 +455,13 @@
   <ItemGroup>
     <ClCompile Include="..\..\common\CIniFileAccess.cpp" />
     <ClCompile Include="..\..\common\common.cpp" />
+    <ClCompile Include="..\..\common\DSFilterEnum.cpp" />
     <ClCompile Include="IT35.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\CIniFileAccess.h" />
     <ClInclude Include="..\..\common\common.h" />
+    <ClInclude Include="..\..\common\DSFilterEnum.h" />
     <ClInclude Include="..\..\common\IBdaSpecials.h" />
     <ClInclude Include="..\..\common\IBdaSpecials2.h" />
     <ClInclude Include="..\..\common\LockChannel.h" />
