[IT35] PrivateSetTSID="Special" / PrivateSetTSID="PostTR" の時の動作を変更

--- a/doc/BonDriver_PX_MLT5PE.ini
+++ b/doc/BonDriver_PX_MLT5PE.ini
@@ -2,7 +2,7 @@
 [IT35]
 DebugLog=NO
 RewriteIFFreq=YES
-PrivateSetTSID="POSTTR"
+PrivateSetTSID="PostTR"
 DualModeISDB=YES
 ; LNB“dŒ¹‚Ì‹Ÿ‹‹‚ğs‚¤ê‡‚Í‰º‹L‚ğ LNBPowerON=YES‚É‘‚«Š·‚¦‚é
 LNBPowerON=NO
@@ -20,6 +20,7 @@ DefaultNetwork="Dual"
 NotExistCaptureDevice=YES
 SignalLevelCalcType="TunerAdd"
 QualityCoefficient=100
+SignalLockedJudgeType="Always"
 
 [BonDriver]
 DebugLog=NO
