[WinSCard.ini] MLT5PE用のコメント追加

--- a/doc/WinSCard-x3U4/WinSCard.ini
+++ b/doc/WinSCard-x3U4/WinSCard.ini
@@ -13,6 +13,7 @@ TunerFriendlyName="PXW3U4 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="PXQ3U4 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="PXW3PE4 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="PXQ3PE4 Multi Tuner ISDB-T BDA Filter #0"
+;TunerFriendlyName="PXMLT5PE Multi Tuner Dual Mode ISDB BDA Filter #0"
 ;TunerFriendlyName="ISDBT6013 Multi Tuner ISDB-T BDA Filter #0"
 ;TunerFriendlyName="ISDB2056 Dual Mode ISDB BDA Filter"
 ;
