[IT35] PX-MLT5PEでISDB-Tのチャンネルロックに時間がかかる問題の対策を追加

--- a/BdaSpecials/IT35/IT35.vcxproj
+++ b/BdaSpecials/IT35/IT35.vcxproj
@@ -455,14 +455,17 @@
   <ItemGroup>
     <ClCompile Include="..\..\common\CIniFileAccess.cpp" />
     <ClCompile Include="..\..\common\common.cpp" />
+    <ClCompile Include="..\..\common\DSFilterEnum.cpp" />
     <ClCompile Include="IT35.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\CIniFileAccess.h" />
     <ClInclude Include="..\..\common\common.h" />
+    <ClInclude Include="..\..\common\DSFilterEnum.h" />
     <ClInclude Include="..\..\common\IBdaSpecials.h" />
     <ClInclude Include="..\..\common\IBdaSpecials2.h" />
     <ClInclude Include="..\..\common\LockChannel.h" />
+    <ClInclude Include="..\..\common\WaitWithMsg.h" />
     <ClInclude Include="IT35.h" />
     <ClInclude Include="IT35propset.h" />
   </ItemGroup>
