--- a/doc/BonDriver_PX_MLT5PE.ini
+++ b/doc/BonDriver_PX_MLT5PE.ini
@@ -2,8 +2,17 @@
 [IT35]
 DebugLog=NO
 RewriteIFFreq=YES
-PrivateSetTSID="POSTTR"
+PrivateSetTSID="Special"
 DualModeISDB=YES
+SpecialLockConfirmTime=4000
+SpecialLockSetTSIDInterval=400
+; (PX-MLT5PE専用オプション)ISDB-T時、CXD2856にNominal Rateを再設定する
+RewriteNominalRate=YES
+; CXD2856に設定するNominal Rate(5個の8bit数値)
+;   本来の値(BDA DriverがSetする値)は"0x17,0xA0,0x00,0x00,0x00"
+;   Tuner番号毎に最適値が異なるかもしれない
+;   下記の値は根拠もなく適当に設定してみた値で最適値を追い込んだものではありません
+NominalRate_List="0x17,0xA0,0x33,0x33,0x33"
 ; LNB電源の供給を行う場合は下記を LNBPowerON=YESに書き換える
 LNBPowerON=NO
 
@@ -20,6 +29,7 @@ DefaultNetwork="Dual"
 NotExistCaptureDevice=YES
 SignalLevelCalcType="TunerAdd"
 QualityCoefficient=100
+SignalLockedJudgeType="Always"
 
 [BonDriver]
 DebugLog=NO
